// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`devSitePackage loader test when both repository url and repository directory are specified 1`] = `
"import React from 'react';
import Badges from 'terra-dev-site/lib/loader-components/_Badges';

export const Badge = ({ url }) => (
      <Badges
        src=\\"https://github.com/cerner/terra-dev-site/tree/main/src/loader-components\\"
        name=\\"terra-dev-site\\"
        version=\\"6.2.0\\"
        url={url}
      />
    );"
`;

exports[`devSitePackage loader test when only repository directory is specified 1`] = `
"import React from 'react';
import Badges from 'terra-dev-site/lib/loader-components/_Badges';

export const Badge = ({ url }) => (
      <Badges
        name=\\"terra-dev-site\\"
        version=\\"6.2.0\\"
        url={url}
      />
    );"
`;

exports[`devSitePackage loader test when only repository url is specified 1`] = `
"import React from 'react';
import Badges from 'terra-dev-site/lib/loader-components/_Badges';

export const Badge = ({ url }) => (
      <Badges
        src=\\"https://github.com/cerner/terra-dev-site\\"
        name=\\"terra-dev-site\\"
        version=\\"6.2.0\\"
        url={url}
      />
    );"
`;

exports[`devSitePackage loader test when repository attribute is not specified 1`] = `
"import React from 'react';
import Badges from 'terra-dev-site/lib/loader-components/_Badges';

export const Badge = ({ url }) => (
      <Badges
        name=\\"terra-dev-site\\"
        version=\\"6.2.0\\"
        url={url}
      />
    );"
`;

exports[`devSitePackage loader test when the repository url is not a git url 1`] = `
"import React from 'react';
import Badges from 'terra-dev-site/lib/loader-components/_Badges';

export const Badge = ({ url }) => (
      <Badges
        src=\\"https://v8.googlecode.com/svn/trunk/\\"
        name=\\"terra-dev-site\\"
        version=\\"6.2.0\\"
        url={url}
      />
    );"
`;

exports[`devSitePackage loader test when url is specified without git+ prefix and directory starts with front slash 1`] = `
"import React from 'react';
import Badges from 'terra-dev-site/lib/loader-components/_Badges';

export const Badge = ({ url }) => (
      <Badges
        src=\\"https://github.com/cerner/terra-dev-site/tree/main/src/loader-components\\"
        name=\\"terra-dev-site\\"
        version=\\"6.2.0\\"
        url={url}
      />
    );"
`;
